--- a/ControleProdutosQ3Retomada/appsettings.json
+++ b/ControleProdutosQ3Retomada/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "ConnectionStrings": {
+    "Database": "Server=localhost;Database=ProdutosQ3;Trusted_Connection=True;MultipleActiveResultSets=true;Integrated Security=false;User ID=sa;Password=Ad#1an01;Encrypt=False"
+  },
   "AllowedHosts": "*"
 }
